[project]
name = "loopnet-mcp"
version = "0.1.0"
description = "MCP server for searching Loopnet commercial real estate listings"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
    "curl_cffi>=0.7,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "nodriver>=0.48,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
